--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,4 +1,44 @@
-﻿<!doctype html><html><head><meta charset='utf-8'/><meta name='viewport' content='width=device-width,initial-scale=1'/><title>Cognomega</title><script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-</head><body><div id='root'></div><script type='module' src='/src/main.tsx'></script></body></html>
+﻿<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1"
+    />
+    <title>Cognomega</title>
 
+    <!-- Cloudflare Turnstile (kept from original) -->
+    <script
+      src="https://challenges.cloudflare.com/turnstile/v0/api.js"
+      async
+      defer
+    ></script>
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+
+    <!-- Optional: place for a global stylesheet if you have one emitted by your build -->
+    <!-- <link rel="stylesheet" href="/assets/style.css"> -->
+    <meta name="theme-color" content="#0f172a" />
+  </head>
+  <body>
+    <div id="root"></div>
+    <noscript>This app requires JavaScript to run.</noscript>
+
+    <!-- Runtime configuration (merged): lets you override at deploy-time -->
+    <script>
+      // You can override these via an inline <script> ABOVE this block or by
+      // writing window.__COG__ from a _worker.js in Cloudflare Pages.
+      // Vite will keep this block as-is at runtime.
+      window.__COG__ = window.__COG__ || {};
+      // Default to production API, but allow overrides
+      window.__COG__.API_BASE =
+        window.__COG__.API_BASE ||
+        "https://api.cognomega.com";
+    </script>
+
+    <!-- Vite dev entry (Vite rewrites this to hashed assets on build) -->
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
+</html>
