fix(turnstile): remove duplicate global script; keep single lazy preloader

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,10 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Cognomega</title>
 
     <!-- Favicon -->
@@ -25,8 +22,7 @@
       window.__COG__ = window.__COG__ || {};
       // Default to production API, but allow overrides
       window.__COG__.API_BASE =
-        window.__COG__.API_BASE ||
-        "https://api.cognomega.com";
+        window.__COG__.API_BASE || "https://api.cognomega.com";
     </script>
 
     <!-- Vite dev entry (Vite rewrites this to hashed assets on build) -->
