ui: aurora/glass shell + docs

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -10,7 +10,7 @@
 
     <meta name="theme-color" content="#0f172a" />
   </head>
-  <body>
+  <body class="aurora-bg">
     <div id="root"></div>
     <noscript>This app requires JavaScript to run.</noscript>
 
@@ -29,3 +29,4 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
+
